Bug 184088, Error compiling nsMaiTopLevel.cpp with gcc 3.2.1 patch by joshk@mspencer.net. This is NOT for the default build.